--- a/templates/vaderresult.html
+++ b/templates/vaderresult.html
@@ -9,7 +9,11 @@ Sentiment Analysis and Response Statistics
 {% block content %}
     <h1>Sentiment Analysis and Response Summary</h1>
     
- 
+    <div class="d-flex flex-column align-items-center mt-3" id="imageContainer">
+        <img id="sentimentImage" alt="" class="mr-3" style="width: 200px;">
+        <span id="sentimentText" class="h5"></span>
+        <span id="additionalText" class="ml-5"></span>
+    </div>
         <!-- Canvas to display the sentiment bar chart -->
       
             <canvas id="sentimentChart" width="400" height="50"></canvas>
@@ -24,11 +28,7 @@ Sentiment Analysis and Response Statistics
         <span id="Totalresponses" class="display-6">Total responses: {{ num_inputs }}</span>
     </div>
 
-    <div class="d-flex align-items-center mt-3" id="imageContainer">
-        <img id="sentimentImage" alt="" class="mr-3" style="width: 200px;">
-        <span id="sentimentText" class="h5"></span>
-        <span id="additionalText" class="ml-5"></span>
-    </div>
+
 
     <script>
         // The average compound score passed from Flask
@@ -67,19 +67,29 @@ Sentiment Analysis and Response Statistics
         // Display an image and text based on whether the sentiment is positive or negative
         var img = document.getElementById('sentimentImage');
         var stext = document.getElementById('sentimentText');
-        var atext = document.getElementById('additionalText');
 
-        if (averageScore > 0) {
-            img.src = '/static/above.png';  
-            img.alt = 'Positive Sentiment';
-            stext.innerText = 'Overall sentiment is positive!';
-            atext.innerText = `Average Score: ${averageScore.toFixed(2)}`;
-        } else {
-            img.src = '/static/below.png';  
-            img.alt = 'Negative Sentiment';
-            stext.innerText = 'The overall sentiment seems to be negative...';
-            atext.innerText = `Average Score: ${averageScore.toFixed(2)}`;
-        }
+        if (averageScore >= 0.7 && averageScore <= 1.0) {
+    img.src = '/static/very_positive.png';
+    img.alt = 'Very Positive Sentiment';
+    stext.innerText = 'Overall sentiment is very positive!';
+} else if (averageScore >= 0.21 && averageScore < 0.7) {
+    img.src = '/static/positive.png';
+    img.alt = 'Positive Sentiment';
+    stext.innerText = 'Overall sentiment is positive.';
+} else if (averageScore >= -0.2 && averageScore <= 0.2) {
+    img.src = '/static/neutral.png';
+    img.alt = 'Neutral Sentiment';
+    stext.innerText = 'Overall sentiment is neutral.';
+} else if (averageScore >= -0.69 && averageScore < -0.21) {
+    img.src = '/static/negative.png';
+    img.alt = 'Negative Sentiment';
+    stext.innerText = 'Overall sentiment is negative.';
+} else if (averageScore >= -1.0 && averageScore <= -0.7) {
+    img.src = '/static/very_negative.png';
+    img.alt = 'Very Negative Sentiment';
+    stext.innerText = 'Overall sentiment is very negative.';
+}
+
 
         // Update the average answer text element
         document.getElementById('averageAnswerText').innerText = averageAnswer.toFixed(2);
