--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <div class="col-sm-auto sticky-top" style="background-color: #e8f4ff;">
             <div class="d-flex flex-sm-column flex-row flex-nowrap align-items-center sticky-top" style="background-color: #e8f4ff;">
                 <a href="/" class="d-block p-3 link-dark text-decoration-none" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Icon-only">
-                    <i class="bi-bootstrap fs-1"></i>
+                    <i class="bi bi-stripe fs-1"></i>
                 </a>
                 <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center" >
                     <li class="nav-item">
@@ -32,24 +32,13 @@
                         <a href="{{url_for('views.index')}}" class="nav-link py-3 px-2" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Orders">
                             <i class="bi-table fs-1"></i>
                         </a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link py-3 px-2" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Products">
-                            <i class="bi-heart fs-1"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link py-3 px-2" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Customers">
-                            <i class="bi bi-gear fs-1"></i>
-                        </a>
-                    </li>
+                    </li>   
                 </ul>
                 <div class="dropdown">
                     <a href="#" class="d-flex align-items-center justify-content-center p-3 link-dark text-decoration-none dropdown-toggle" id="dropdownUser3" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="bi-person-circle h2"></i>
                     </a>
                     <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser3">
-                        <li><a class="dropdown-item" href="#">New project...</a></li>
                         <li><a class="dropdown-item" href="{{url_for('views.settings')}}">Settings</a></li>
                         <li><a class="dropdown-item" href="{{url_for('views.register')}}">Profile</a></li>
                         <li><hr class="dropdown-divider"></li>
