Updated form layout and added login link

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{{url_for('views.index')}}" class="nav-link py-3 px-2" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Orders">
+                        <a href="{{url_for('views.faculty_averages')}}" class="nav-link py-3 px-2" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Orders">
                             <i class="bi-table fs-1"></i>
                         </a>
                     </li>   
