--- a/templates/index.html
+++ b/templates/index.html
@@ -73,6 +73,8 @@
 
        <!-- SEPARATE -->
        <hr style="border: 10px solid #72281e; margin: 10px 0; border-radius: 10px;">
+       <h6>Please evaluate your subject instructor/professor objectively using the scale below.</h6>
+       <img src="static/scale.png" alt="Scale" class="img-fluid rounded">
       <h4>A. Commitment</h4>
 
       {% for question in questions %}
