--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,11 @@
                             <i class="bi-table fs-1"></i>
                         </a>
                     </li>   
+                    <li>
+                        <a href="{{url_for('vadercounts.vadercount')}}" class="nav-link py-3 px-2" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Orders">
+                            <i class="bi bi-emoji-smile fs-1"></i>
+                        </a>
+                    </li>  
                 </ul>
                 <div class="dropdown">
                     <a href="#" class="d-flex align-items-center justify-content-center p-3 link-dark text-decoration-none dropdown-toggle" id="dropdownUser3" data-bs-toggle="dropdown" aria-expanded="false">
